# crap4rust

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTED-FEATURES.md  Phase1.md  README.md  ROADMAP.md  crap4rust_specification.md
src/: app.rs  cli.rs  coverage.rs  lib.rs  main.rs  manifest.rs  model.rs  report.rs  source.rs
tests/: cli_integration.rs  complexity_tests.rs
tests/fixtures/aggregation_fixture/: Cargo.toml
tests/fixtures/aggregation_fixture/src/: lib.rs
tests/fixtures/complexity/: Cargo.toml
tests/fixtures/complexity/src/: lib.rs
tests/fixtures/inline_test_module_fixture/: Cargo.toml
tests/fixtures/inline_test_module_fixture/src/: lib.rs
tests/fixtures/no_function_fixture/: Cargo.toml
tests/fixtures/no_function_fixture/src/: lib.rs
tests/fixtures/root_workspace_fixture/: Cargo.toml
tests/fixtures/root_workspace_fixture/helper-member/: Cargo.toml
tests/fixtures/root_workspace_fixture/helper-member/src/: lib.rs
tests/fixtures/root_workspace_fixture/src/: lib.rs
tests/fixtures/single_fixture/: Cargo.toml
tests/fixtures/single_fixture/src/: lib.rs
tests/fixtures/test_target_fixture/: Cargo.toml
tests/fixtures/test_target_fixture/src/: lib.rs
tests/fixtures/test_target_fixture/tests/: support.rs
tests/fixtures/workspace_fixture/: Cargo.toml
tests/fixtures/workspace_fixture/app-core/: Cargo.toml
tests/fixtures/workspace_fixture/app-validation/: Cargo.toml
tests/fixtures/workspace_validation_fixture/: Cargo.toml
tests/fixtures/workspace_validation_fixture/app-validation/: Cargo.toml
(+4 files in other folders)
